--- a/sass/colors.scss
+++ b/sass/colors.scss
@@ -10,7 +10,7 @@
 
 .bg {
     &-primary { background-color: $color-primary; }
-    &-secondary { background-color: $color-primary; }
+    &-secondary { background-color: $color-secondary; }
     &-white { background-color: white; }
     &-black { background-color: black; }
     &-light-grey { background-color: $color-light-grey; }
