--- a/sass/style.scss
+++ b/sass/style.scss
@@ -25,7 +25,7 @@ $color-dark: #0c2a3b;
 @import 'text';
 
 body {
-  font: 100% $font-stack;
+  font: normal 1rem $font-stack;
   color: $color-dark;
   font-size: $default-font-size;
 }
